# currency_rates_service_assignment

./: Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: actions.py  main.py
app/api/dependencies/: db.py
app/api/routes/: api.py  symbols.py
app/core/: config.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: b60814b24383_initial.py
app/db/tables/: symbols.py
app/models/schema/: symbols.py
tests/: conftest.py
tests/app/api/routes/: test_symbos.py
